2003-01-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/pnm2ppa.xml: Changed link for Mac OS X
	  installer to Tyler Blessing's version.
	
2003-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/driver/pnm2ppa.xml: Added link to Goeff Kruse's Mac OS
	  X installer.
	
2003-01-21  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: HP OfficeJet 600, 610, 625, 630, 635
	  have problems with HPIJS, switched recommended driver to
	  GIMP-Print and updated text appropriately.

	* db/source/printer/*.xml: Fixed printer ID entries for the HP
	  OfficeJet 520, 570, 580, 590.

2003-01-19  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/bjc250gs-Model.xml: Fixed default values.

2003-01-18  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: Updated texts for the Epson EPL-5700L,
	  EPL-5700, EPL-5800L, EPL-5800, EPL-5900L to mention that there
	  is a driver for the "L" models available now. Raised the rating
	  of the "L" models to "Partailly".

	* db/source/printer/Epson-Stylus_CX5200.xml: Updated instructions
	  to get scanning to work, the USB ID of the scanner part is known
	  now.

	* db/source/driver/lxm3200-tweaked.xml: Added hint that the
	  Lexmark Z12 can now also print unidirectionally.

2003-01-15  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: Added the HP OfficeJet 520, 570, 580,
	  590, 610, 630, 700, 720, 725. 6110.

	* db/source/printer/*.xml: Text/URL updates for the HP OfficeJet
	  500, 600, 625, 635, 710, D155.

	* db/source/driver/cdj670.xml: Added HP OfficeJet 500, 600, and
	  700 series to the list of supported printers.

	* db/source/printer/HP-DeskJet_995C.xml: Inserted margin values
	  for testing.

2002-12-30  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/*.xml: Put rest of the options into groups.

	* db/source/opt/ppmtomd-Colours.xml,
	  db/source/opt/ppmtomd-PrintColors.xml: Renamed "Colours" option