@@ -22,7 +22,7 @@
   </lang>
   <autodetect>
   </autodetect>
-  <functionality>B</functionality>
+  <functionality>A</functionality>
   <driver>gimp-print</driver>
   <!--verified-->
   <!--no "contrib_url"-->
@@ -36,11 +36,12 @@
     GIMP-Print version does not list this device explicitly as
     supported, pretend that you have the C62.&lt;p&gt;
 
-    To be able to scan you need to do a small change in the
-    "&lt;tt&gt;scanner.o&lt;/tt&gt;" kernel module. See &lt;a
+    To be able to scan you need either kernel 2.4.21 or newer or you
+    do a small change in the "&lt;tt&gt;scanner.o&lt;/tt&gt;" module
+    of older kernels. See &lt;a
     href="http://www.geocrawler.com/archives/3/2571/2002/10/0/9767006/"&gt;this
-    posting on the linux-usb-devel mailing list&lt;/a&gt; and the thread
-    &quot;&lt;a
+    posting on the linux-usb-devel mailing list&lt;/a&gt; and the
+    thread &quot;&lt;a
     href="http://www.linuxprinting.org/pipermail/epson-list/2002q4/thread.html"&gt;Epson
     Stylus cx3200 MFP&lt;/a&gt;&quot; on the &lt;a
     href="http://www.linuxprinting.org/cgi-bin/mailman/listinfo/epson-list"&gt;Epson
