@@ -22,7 +22,7 @@
   </lang>
   <autodetect>
   </autodetect>
-  <functionality>B</functionality>
+  <functionality>A</functionality>
   <driver>gimp-print</driver>
   <!--verified-->
   <!--no "contrib_url"-->
@@ -35,11 +35,9 @@
     version does not list this device explicitly as supported, pretend
     that you have the C82.&lt;p&gt;
 
-    For scanning probably the following procedure which is known to
-    work on the Epson Stylus CX3200 will work:&lt;p&gt;
-
-    You need to do a small change in the
-    "&lt;tt&gt;scanner.o&lt;/tt&gt;" kernel module. See &lt;a
+    To be able to scan you need either kernel 2.4.21 or newer or you
+    need to do a small change in the "&lt;tt&gt;scanner.o&lt;/tt&gt;"
+    module of older kernels. See &lt;a
     href="http://www.geocrawler.com/archives/3/2571/2002/10/0/9767006/"&gt;this
     posting on the linux-usb-devel mailing list&lt;/a&gt; and the
     thread &quot;&lt;a
