@@ -1,3 +1,9 @@
+2003-01-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/driver/Epson-Stylus_CX?200.xml: Raised rating from
+	  "Mostly" to "Perfectly". Both scanning and printing are fully
+	  supported.
+
 2003-01-23  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/driver/pnm2ppa.xml: Changed link for Mac OS X
